# modal-weakestpre

./: .gitignore  .travis.yml  Dockerfile  Dockerfile.deps  Makefile  README.md  _CoqProject  modal-weakestpre.opam
.github/workflows/: build.yml
theories/: mwp.v  mwp_adequacy.v  mwp_lifting.v  mwp_triple.v
theories/modalities/: future.v
theories/mwp_modalities/: mwp_bupd.v  mwp_fupd.v  mwp_future.v  mwp_id.v  mwp_indexed_step_fupd.v  mwp_laterN.v  mwp_mwp_ISF.v  mwp_step_fupd.v
theories/mwp_modalities/ni_logrel/: mwp_left.v  mwp_logrel_fupd.v  mwp_right.v  ni_logrel_fupd_lemmas.v  ni_logrel_lemmas.v
theories/prelude/: base.v
