opam-version: "2.0"
name: "modal-weakestpre"
synopsis: "A modal weakest precondition theory for the Iris program logic framework"
maintainer: "Simon Gregersen <gregersen@cs.au.dk>"
authors: "Amin Timany <timany@cs.au.dk>, Simon Gregersen <gregersen@cs.au.dk>"
license: "BSD-3"
homepage: "https://github.com/logsem/modal-weakestpre"
dev-repo: "git+https://github.com/logsem/modal-weakestpre.git"
bug-reports: "https://github.com/logsem/modal-weakestpre/issues"
build: [make "-j%{jobs}%"]
install: [make "install"]
depends: [
  "coq" { (= "8.12.0") | (= "dev") }
  "coq-iris" { (= "dev.2020-10-04.0.a36f8a23") | (= "dev") }
  "coq-stdpp" { (= "dev.2020-10-02.0.7ae77142") | (= "dev") }
]
