opam-version: "2.0"
name: "modal-weakestpre"
synopsis: "A modal weakest precondition theory for the Iris program logic framework"
maintainer: "Simon Gregersen <gregersen@cs.au.dk>"
authors: "Amin Timany <timany@cs.au.dk>, Simon Gregersen <gregersen@cs.au.dk>"
license: "BSD-3"
homepage: "https://github.com/logsem/modal-weakestpre"
dev-repo: "git+https://github.com/logsem/modal-weakestpre.git"
bug-reports: "https://github.com/logsem/modal-weakestpre/issues"
build: [make "-j%{jobs}%"]
install: [make "install"]
depends: [
  "coq" { (>= "8.13" & < "8.14~") | (= "dev") }
  "coq-iris" { (= "3.4.0") | (= "dev") }
  "coq-stdpp" { (= "1.5.0") | (= "dev") }
]
